--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
             <a href="https://twitter.com/yukisov"><i class="fa fa-twitter"></i> Twitter</a><br/>
             <a href="http://www.pupha.net"><i class="fa fa-rss-square"></i> Blog</a><br/>
             <a href="https://github.com/yukisov"><i class="fa fa-github"></i> GitHub</a><br/>
-            Email: yukisov@gmail.com
+            <a href="mailto:yukisov@gmail.com"><i class="fa fa-envelope"></i> yukisov@gmail.com</a>
           </p>
         </div><!-- /col-md-4 -->
       </div>
