--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -7,8 +7,8 @@
  * URL: http://blacktie.co
  */
 
-@navbar-background-color:     #036465;
-@navbar-border-color:         #013d3f;
+@navbar-background-color:     #1abc9c;
+@navbar-border-color:         #16a085;
 
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
