--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="work.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="http://www.pupha.net">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
