Make footer fixed to bottom

--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -6,7 +6,6 @@
 @navbar-border-color:         #013d3f;
 @navbar-a-hover:              #1abc9c;
 
-
 .image img {
     border-radius: 40px;
     -webkit-border-radius: 40px;
@@ -19,4 +18,10 @@
 
 #header a:hover, a:focus {
     color: @navbar-a-hover;
+}
+
+@media screen and (min-height: 800px) {
+    .pt {
+        min-height: 450px;
+    }
 }
