--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -20,8 +20,13 @@
     color: @navbar-a-hover;
 }
 
+#footer {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
 @media screen and (min-height: 800px) {
     .pt {
-        min-height: 450px;
+        min-height: 500px;
     }
 }
