--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,12 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-md-12">
+        <div class="col-md-6">
+          <h4>Location</h4>
+          <p>Nagoya, Japan</p>
+        </div>
+
+        <div class="col-md-6">
           <h4>My Links</h4>
           <p>
             <a href="https://twitter.com/yukisov"><i class="fa fa-twitter"></i> Twitter</a><br/>
@@ -71,6 +76,14 @@
             <a href="mailto:yukisov@gmail.com"><i class="fa fa-envelope"></i> yukisov@gmail.com</a>
           </p>
         </div><!-- /col-md-4 -->
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-12 text-center footer-below">
+          Copyright © S.Yuki 2014
+        </div>
+
       </div>
 
     </div>
