--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -12,6 +12,11 @@
     -moz-border-radius: 40px;
 }
 
+.navbar-inverse {
+    padding-bottom: 100px;
+    padding-top: 100px;
+}
+
 #header {
     background-image: url(../img/fish-bg.jpg);
 }
@@ -25,8 +30,13 @@
     padding-bottom: 20px;
 }
 
+.footer-below {
+    color: #9b9b9b;
+    font-size: 0.9em;
+}
+
 @media screen and (min-height: 800px) {
     .pt {
-        min-height: 500px;
+        min-height: 420px;
     }
 }
