--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -25,6 +25,10 @@
     color: @navbar-a-hover;
 }
 
+.pt a:hover, a:focus {
+    color: @navbar-border-color;
+}
+
 #footer {
     background-color: #212121;
     padding-top: 30px;
