--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7330,6 +7330,10 @@ bt {
 a:focus {
   color: #1abc9c;
 }
+.pt a:hover,
+a:focus {
+  color: #013d3f;
+}
 #footer {
   background-color: #212121;
   padding-top: 30px;
