--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,9 @@
         <div class="col-md-6">
           <h4>My Links</h4>
           <p>
-            <a href="https://twitter.com/yukisov"><i class="fa fa-twitter"></i> Twitter</a><br/>
-            <a href="http://www.pupha.net"><i class="fa fa-rss-square"></i> Blog</a><br/>
-            <a href="https://github.com/yukisov"><i class="fa fa-github"></i> GitHub</a><br/>
+            <a href="https://twitter.com/yukisov" target="_blank"><i class="fa fa-twitter"></i> Twitter</a><br/>
+            <a href="http://www.pupha.net" target="_blank"><i class="fa fa-rss-square"></i> Blog</a><br/>
+            <a href="https://github.com/yukisov" target="_blank"><i class="fa fa-github"></i> GitHub</a><br/>
             <a href="mailto:yukisov@gmail.com"><i class="fa fa-envelope"></i> yukisov@gmail.com</a>
           </p>
         </div><!-- /col-md-4 -->
