Change Copyright on the footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
       <div class="row">
 
         <div class="col-md-12 text-center footer-below">
-          Copyright © S.Yuki 2014
+          Copyright © Yuki.S 2014
         </div>
 
       </div>
