Simplify the whole site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Yuki.S</title>
+    <title>{{ page.title }}</title>
 
     <!-- Font Awesome -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/js/frontend.min.js"></script>
@@ -31,69 +31,19 @@
 
   <body>
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-inverse navbar-static-top" id="header">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Yuki.S</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="work.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
   <!-- +++++ Content Section +++++ -->
   {{ content }}
 
   <!-- +++++ Footer Section +++++ -->
 
   <div id="footer">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-6">
-          <h4>My Links</h4>
-          <p>
-            <a href="https://twitter.com/yukisov" target="_blank"><i class="fa fa-twitter"></i> Twitter</a><br/>
-            <a href="http://www.pupha.net" target="_blank"><i class="fa fa-rss-square"></i> Blog</a><br/>
-            <a href="https://github.com/yukisov" target="_blank"><i class="fa fa-github"></i> GitHub</a><br/>
-            <a href="mailto:yukisov@gmail.com"><i class="fa fa-envelope"></i> yukisov@gmail.com</a>
-          </p>
-        </div><!-- /col-md-4 -->
-
-        <div class="col-md-6">
-          <h4>Location</h4>
-          <p>Nagoya, Japan</p>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-12 text-center footer-below">
-          Copyright © Yuki.S 2014
-        </div>
-
-      </div>
-
-    </div>
+    Copyright © Yuki.S 2014-2015
   </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/frontend.min.js"></script>
+    <script src="assets/js/app.min.js"></script>
   </body>
 </html>
