Add the "ex001" page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/app.min.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet">
 
     <script src="assets/js/lib/jquery-1.11.3.min.js"></script>
 
@@ -35,15 +35,25 @@
 
   <!-- +++++ Footer Section +++++ -->
 
-  <div id="footer">
-    Copyright © Yuki.S 2014-2015
+  <div class="container-fluid" id="footer">
+    <div class="row">
+      <div class="col-md-4">
+
+      </div>
+      <div class="col-md-4 text-center">
+          Copyright © Yuki.S 2014-2015
+      </div>
+      <div class="col-md-4 text-right">
+        <a href="/"><i class="fa fa-home"></i> Home</a>
+      </div>
+    </div>
   </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/common.min.js"></script>
-    <script src="assets/js/app.min.js"></script>
+    <!--<script src="assets/js/common.min.js"></script>-->
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
