--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/app.css" rel="stylesheet">
+    <link href="assets/css/app.min.css" rel="stylesheet">
 
     <script src="assets/js/lib/jquery-1.11.3.min.js"></script>
 
@@ -54,6 +54,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="assets/js/bootstrap.min.js"></script>
     <!--<script src="assets/js/common.min.js"></script>-->
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/app.min.js"></script>
   </body>
 </html>
