--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
       </div>
       <div class="col-md-4 text-center">
-          Copyright © Yuki.S 2014-2016
+          Copyright &copy; 2014-2016 by Yuki.S
       </div>
       <div class="col-md-4 text-right">
         <a href="/"><i class="fa fa-home"></i> Home</a>
