--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 
   <!-- +++++ Footer Section +++++ -->
 
-  <div class="container-fluid" id="footer">
+  <!--<div class="container-fluid" id="footer">
     <div class="row">
       <div class="col-md-4">
 
@@ -47,7 +47,7 @@
         <a href="/"><i class="fa fa-home"></i> Home</a>
       </div>
     </div>
-  </div>
+  </div>-->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
